fix/payment-label-overflow

--- a/src/components/FormElements/PaymentLabel/paymentCheckboxLabel.module.scss
+++ b/src/components/FormElements/PaymentLabel/paymentCheckboxLabel.module.scss
@@ -65,29 +65,32 @@
 .name {
   border: none;
   display: flex;
-  flex-flow: column nowrap;
+  flex-flow: row nowrap;
   line-height: 1rem;
-  justify-content: center;
-  padding: 0px 10px;
   text-align: left;
   flex-grow: 1;
   flex-shrink: 1;
 
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 25px;
+  letter-spacing: 0em;
+  color: $gold900;
+
+  overflow: hidden;
+
   .description {
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 25px;
-    letter-spacing: 0em;
-    color: $gold900;
+    flex-grow: 1;
+    flex-shrink: 1;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    width: 100px;
+    display: block;
+    overflow: hidden
   }
+
   .message {
-    color: $gray700;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 20px;
-    letter-spacing: 0px;
   }
 }
 
@@ -127,23 +130,19 @@
   text-align: right;
   font-size: 15px;
   text-overflow: ellipsis;
+  display: flex;
+  justify-content: space-between;
 
+  color: $gray900;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0px;
   .description {
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 25px;
-    letter-spacing: 0em;
-    color: $gold900;
   }
 
   .message {
-    color: $gray900;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 20px;
-    letter-spacing: 0px;
   }
 }
 
@@ -151,7 +150,9 @@
   transition: .3s;
   width: 100%;
   display: flex;
-  align-items: center;
+  flex-flow: column nowrap;
+  padding: 0px 10px;
+  padding-right: 0px;
   justify-content: space-between;
 }
 
